--- a/backend/package.json
+++ b/backend/package.json
@@ -2,11 +2,18 @@
   "name": "hono",
   "type": "module",
   "dependencies": {
-    "hono": "^4.10.7"
+    "@prisma/adapter-pg": "^7.1.0",
+    "@prisma/client": "^7.1.0",
+    "better-auth": "^1.4.5",
+    "dotenv": "^17.2.3",
+    "hono": "^4.10.7",
+    "pg": "^8.16.3"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
-    "tsx": "^4.7.1",
+    "@types/pg": "^8.15.6",
+    "prisma": "^7.1.0",
+    "tsx": "^4.21.0",
     "typescript": "^5.8.3"
   }
 }
