--- a/backend/package.json
+++ b/backend/package.json
@@ -1,13 +1,30 @@
 {
   "name": "hono",
   "type": "module",
+  "scripts": {
+    "dev": "tsx watch src/index.ts",
+    "build": "tsc && tsc -p tsconfig.build.json",
+    "start": "NODE_ENV=production node dist/index.js",
+    "start:dev": "NODE_ENV=development tsx src/index.ts",
+    "type-check": "tsc --noEmit",
+    "lint": "tsc --noEmit",
+    "db:migrate": "prisma migrate dev",
+    "db:migrate:prod": "prisma migrate deploy",
+    "db:generate": "prisma generate",
+    "db:studio": "prisma studio",
+    "db:push": "prisma db push",
+    "db:reset": "prisma migrate reset"
+  },
   "dependencies": {
+    "@hono/swagger-ui": "^0.5.2",
+    "@hono/zod-openapi": "^0.16.0",
     "@prisma/adapter-pg": "^7.1.0",
     "@prisma/client": "^7.1.0",
     "better-auth": "^1.4.5",
     "dotenv": "^17.2.3",
     "hono": "^4.10.7",
-    "pg": "^8.16.3"
+    "pg": "^8.16.3",
+    "zod": "^3.22.4"
   },
   "devDependencies": {
     "@types/node": "^20.11.17",
