fix: controller and openapi

--- a/backend/package.json
+++ b/backend/package.json
@@ -2,10 +2,10 @@
   "name": "hono",
   "type": "module",
   "scripts": {
-    "dev": "tsx watch src/index.ts",
-    "build": "tsc && tsc -p tsconfig.build.json",
-    "start": "NODE_ENV=production node dist/index.js",
-    "start:dev": "NODE_ENV=development tsx src/index.ts",
+    "dev": "tsx watch src/server.ts",
+    "build": "prisma generate && tsc && tsc -p tsconfig.build.json",
+    "start": "npm run db:migrate:prod && NODE_ENV=production node dist/server.js",
+    "start:dev": "NODE_ENV=development tsx src/server.ts",
     "type-check": "tsc --noEmit",
     "lint": "tsc --noEmit",
     "db:migrate": "prisma migrate dev",
