feat: add vercel.json

--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "tsx watch src/server.ts",
     "build": "prisma generate && tsc && tsc -p tsconfig.build.json",
-    "start": "npm run db:migrate:prod && NODE_ENV=production node dist/server.js",
+    "start": "NODE_ENV=production node dist/server.js",
     "start:dev": "NODE_ENV=development tsx src/server.ts",
     "type-check": "tsc --noEmit",
     "lint": "tsc --noEmit",
