--- a/backend/package.json
+++ b/backend/package.json
@@ -3,7 +3,7 @@
   "type": "module",
   "scripts": {
     "dev": "tsx watch src/server.ts",
-    "build": "prisma generate && tsc && tsc -p tsconfig.build.json",
+    "build": "prisma generate && tsc",
     "start": "NODE_ENV=production node dist/server.js",
     "start:dev": "NODE_ENV=development tsx src/server.ts",
     "type-check": "tsc --noEmit",
