--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,4 @@
-DATABASE_URL=postgresql://user:password@localhost:5432/listinha
-
+DATABASE_URL=
+NODE_ENV=
+VERCEL_OIDC_TOKEN=
 JWT_SECRET=
-
-PORT=3000
-NODE_ENV=development
