--- a/backend/.gitignore
+++ b/backend/.gitignore
@@ -14,6 +14,7 @@ node_modules/
 # env
 .env
 .env.production
+.env.local
 
 # logs
 logs/
@@ -29,3 +30,4 @@ lerna-debug.log*
 .vercel
 
 /src/generated/prisma
+.env*.local
