--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,13 +19,14 @@
     "babel-preset-expo": "^54.0.8",
     "buffer": "^6.0.3",
     "expo": "~54.0.27",
+    "expo-file-system": "~19.0.20",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
     "expo-linking": "~8.0.10",
     "expo-navigation-bar": "~5.0.10",
     "expo-router": "~6.0.17",
     "expo-secure-store": "~15.0.8",
-    "expo-sharing": "^14.0.8",
+    "expo-sharing": "~14.0.8",
     "expo-splash-screen": "~31.0.12",
     "expo-status-bar": "~3.0.9",
     "nativewind": "latest",
