--- a/mobile/package.json
+++ b/mobile/package.json
@@ -24,6 +24,7 @@
     "expo-haptics": "~15.0.8",
     "expo-linking": "~8.0.10",
     "expo-navigation-bar": "~5.0.10",
+    "expo-print": "~15.0.8",
     "expo-router": "~6.0.17",
     "expo-secure-store": "~15.0.8",
     "expo-sharing": "~14.0.8",
@@ -47,6 +48,7 @@
     "eslint-config-prettier": "^10.1.2",
     "prettier": "^3.2.5",
     "prettier-plugin-tailwindcss": "^0.5.11",
+    "react-refresh": "^0.18.0",
     "tailwindcss": "^3.4.0",
     "typescript": "~5.9.2"
   },
