--- a/mobile/app.json
+++ b/mobile/app.json
@@ -4,25 +4,25 @@
     "slug": "sacolafacil",
     "version": "1.0.0",
     "scheme": "sacolafacil",
+    "orientation": "portrait",
+    "userInterfaceStyle": "light",
+    "icon": "./assets/icon.png",
+    "splash": {
+      "image": "./assets/splash.png",
+      "resizeMode": "cover",
+      "backgroundColor": "#ffffff"
+    },
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "web": {
-      "favicon": "./assets/favlogo.png"
+      "favicon": "./assets/favicon.png"
     },
     "experiments": {
       "tsconfigPaths": true
     },
     "plugins": [
       "expo-secure-store"
-    ],
-    "orientation": "portrait",
-    "icon": "./assets/logo.png",
-    "userInterfaceStyle": "light",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "assetBundlePatterns": [
-      "**/*"
     ],
     "ios": {
       "supportsTablet": true
