--- a/mobile/package.json
+++ b/mobile/package.json
@@ -19,6 +19,7 @@
     "babel-preset-expo": "^54.0.8",
     "buffer": "^6.0.3",
     "expo": "~54.0.27",
+    "expo-constants": "~18.0.11",
     "expo-file-system": "~19.0.20",
     "expo-font": "~14.0.10",
     "expo-haptics": "~15.0.8",
@@ -34,9 +35,11 @@
     "react": "19.1.0",
     "react-native": "0.81.5",
     "react-native-currency-input": "^1.1.1",
+    "react-native-gesture-handler": "~2.28.0",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
+    "react-native-svg": "15.12.1",
     "react-native-worklets": "0.5.1",
     "sonner-native": "^0.21.2"
   },
